--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 API_KEY = "YOUR_GEMINI_API_KEY"
 RESERVE_API_KEY = "YOUR_RESERVE_GEMINI_APIKEY" #Optional
 
+ALLOWED_HOSTS = 127.0.0.1,localhost
+CSRF_TRUSTED_ORIGINS = http://localhost,http://127.0.0.1
+
 SECRET_KEY = "YOUR DJANGO SECRET KEY"
